--- a/source/_posts/yuque/11月生活小结(2018).md
+++ b/source/_posts/yuque/11月生活小结(2018).md
@@ -1,5 +1,5 @@
 ---
-title:  11月生活小结
+title:  11月生活小结(2018)
 urlname: xzxhcv
 date: 2018-11-05 20:04:46 +0800
 update: Mon Nov 05 2018 20:04:50 GMT+0800 (中国标准时间)
